--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -189,7 +189,6 @@ body {
 .download-image {
     width: 2rem;
     height: 2rem;
-    /* margin-top: 20px; */
 }
 
 .cv {
@@ -236,10 +235,10 @@ body {
 
 .languages {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     place-items: center;
     place-content: center;
-    column-gap: 2rem;
+    column-gap: 1rem;
     padding: 5rem;
 }
 
@@ -250,7 +249,7 @@ body {
         place-items: center;
         place-content: center;
         column-gap: 2rem;
-        padding: 5rem;
+        padding: 2rem;
     }
 }
 
@@ -261,6 +260,7 @@ body {
 .git-container,
 .trello-container {
     display: flex;
+
 }
 
 .html-desc {
@@ -278,6 +278,12 @@ body {
     width: 3rem;
     height: 3rem;
 }
+.node-image{
+    width: 3rem;
+    height: 3rem;
+    margin-top: .3rem;
+    padding: .2rem;
+}
 
 .html-text,
 .css-text,
@@ -294,8 +300,6 @@ body {
 
 .portfolio {
     width: 100%;
-    /* padding: 3rem; */
-    /* height: 35rem; */
     display: flex;
     justify-content: center;
 }
@@ -326,7 +330,6 @@ body {
 .blog {
     margin-top: 2.5rem;
     width: 100%;
-    /* height: 35rem; */
     padding: 5rem;
 }
 
@@ -456,7 +459,7 @@ textarea.blog-form-text {
     display: none;
 }
 
-.message .danger {
+.form-message .danger {
     font-size: 20px;
     position: absolute;
     color: red;
